 - [ GH-n ], please see https://github.com/jython/jython.
 - [ FM-n ], please see https://github.com/jython/frozen-mirror.

==============================================================================
Jython 2.7.4
==============================================================================

New Features

    - Nothing yet.


Jython 2.7.4a1 Bugs fixed
    - [ GH-269 ] Upgrade Google Guava to 32.0.1 (CVE-2023-2976)
    - [ GH-264 ] Create a security policy
    - [ GH-254 ] Regression in socket.socket.sendall for sending Unicode
    - [ GH-247 ] PySystemStateTest fails on Mac
    - [ GH-245 ] Document download/binaries location
    - [ GH-223 ] JPasswordField no longer works due to 'bullet' echo char
    - [ GH-221 ] Incorrect method precedence with overloading and variable arity
    - [ GH-204 ] IllegalArgumentException: where char method returns non-byte value


==============================================================================
Jython 2.7.3
==============================================================================

New Features

    - The jython command respects the PYTHONDONTWRITEBYTECODE environment
      variable (GH-128).

    - Under PR GH-101, the matching of sequence arguments to the parameters of
      Java methods is improved (and in constructors under GH-201). A Java
      varargs parameter does not match a final sequence in the call if an array
      parameter could do so. (Thanks Peter Holloway.)

    - array.array itemsize of unsigned types is now the same as their signed
      counterparts, where previously it was mostly double. Internal
      representations have changed. Anomalies have been eliminated between
      itemsize and the serialisation (tostring() etc.) for unsigned types, and
      in the range of values accepted in different contexts. The size of type
      'u' (unicode character) is 4 on all platforms. Client code that was
      working around these anomalies may have to change. Overall, the