@@ -197,6 +197,7 @@ Jython in ways large and small, in no particular order:
     Zhihong (Ted) Yu
     Matthew Schweiss (GitHub: TheMatt2)
     Diogo Teles Sant'Anna (GitHub: diogoteles08)
+    Phil Turmel (GitHub: pturmel)
 
 
 Local Variables:
